src/objects/Company_Authorisation__c.object
<CustomObject>
    <fields>
        <fullName>Company_Access_Token__c</fullName>
        <label>Company Access Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <label>Company Number</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateUnitTest__c</fullName>
        <description>This field is used only for unit testing the CompanyAuthenticationRecordsDeletionBatch</description>
        <inlineHelpText>This field is used only for unit testing the CompanyAuthenticationRecordsDeletionBatch</inlineHelpText>
        <label>CreatedDateUnitTest</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiry_Time__c</fullName>
        <label>Expiry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nonce__c</fullName>
        <label>Nonce</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Post-authentication the nonce is used to query the correct record from which the transaction type field sets the context.</description>
        <inlineHelpText>Post-authentication the nonce is used to query the correct record from which the transaction type field sets the context.</inlineHelpText>
        <label>Transaction Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEmail__c</fullName>
        <label>userEmail</label>
        <type>Email</type>
    </fields>
    <label>Company Authorisation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAUTH{000000}</displayFormat>
        <label>Company Authorisation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Authorisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>